Cleanup for PerlFeaturesTable